--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "noImplicitReturns": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "target": "es2022",
     "allowJs": true,
     "resolveJsonModule": true,
@@ -10,7 +13,7 @@
     "isolatedModules": true,
 
     /* Strictness */
-    "strict": true,
+    "strict": false,
     "noUncheckedIndexedAccess": true,
     "checkJs": true,
 
