--- a/.env-e
+++ b/.env-e
@@ -3,4 +3,4 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/surface-workflow-project"
+DATABASE_URL="postgresql://postgres:3e2ws3h8f_XOrJlu@localhost:5433/surface-workflow-project"
